api: Add additional fields to TxSettings
